--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,13 @@
             android:screenOrientation="portrait">
 
         </activity>
+        <activity
+            android:name=".activities.LevelMenuActivity"
+            android:configChanges="orientation"
+            android:exported="true"
+            android:screenOrientation="portrait">
+
+        </activity>
 
         <activity
             android:name=".activities.WinActivity"
