--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:name=".activities.GameActivity"
             android:configChanges="orientation|locale"
             android:exported="true"
+            android:noHistory="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.LevelMenuActivity"
